[project]
name = "sns-post-plugin"
version = "0.1.0"
description = "MCP server for fetching Zenn and Hatena blog articles for SNS recommendation posts"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
]

[project.scripts]
sns-post-plugin = "sns_post_plugin.server:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sns_post_plugin"]
